Fix mobile layout
- hide scrollbar (better looking)
- fix width issue

--- a/src/client/App.scss
+++ b/src/client/App.scss
@@ -1,7 +1,7 @@
 @import "./utils.scss";
 
 #root {
-    max-width: 1280px;
+    max-width: min(100vw, 1280px);
     margin: 0 auto;
     padding: 2rem;
     text-align: center;
