--- a/src/client/index.css
+++ b/src/client/index.css
@@ -153,7 +153,6 @@ button.icon:active {
     }
 }
 .hide-scroll {
-    overflow: hidden; /* Prevents scrolling */
     scrollbar-width: none; /* Firefox */
 }
 
